[package]
name = "rt_bevy"
version = "0.1.0"
edition = "2021"
authors = ["Simon Sommer <creatorsisohd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
lto = "fat"

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
pollster = { version = "0.3.0", features = ["macro"] }
rand = { version = "0.8" }
wgpu = "0.15.1"
winit = "0.28.3"
