[package]
name = "rt_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
lto = "fat"

[dependencies]
anyhow = "1.0.97"
bevy_ecs = { version = "0.15.3", features = [] }
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = { version = "0.30.1", features = ["bytemuck"] }
pollster = { version = "0.4.0", features = ["macro"] }
wgpu = { version = "24.0.3" }
winit = "0.30.9"
